--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,7 @@
 *.js text eol=lf
 *.jsx text eol=lf
+*.html text eol=lf
 *.css text eol=lf
 *.scss text eol=lf
+*.md text eol=lf
+*.json text eol=lf
