--- a/package.json
+++ b/package.json
@@ -2,31 +2,25 @@
   "name": "blog-app",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "@reduxjs/toolkit": "^1.9.3",
-    "axios": "^1.3.4",
-    "date-fns": "^2.29.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-markdown": "^8.0.5",
-    "react-paginate": "^8.1.4",
-    "react-redux": "^8.0.5",
-    "react-router-dom": "^6.8.2",
-    "sass": "^1.58.3"
-  },
   "scripts": {
-    "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "format": "npx prettier --write ./src",
     "lint": "eslint ./src",
     "lint:fix": "eslint ./src --fix --color",
-    "format": "npx prettier --write ./src"
+    "start": "react-scripts start",
+    "test": "react-scripts test",
+    "prepare": "husky install"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.js|jsx": [
+      "npm run lint:fix",
+      "git add"
     ]
   },
   "browserslist": {
@@ -41,6 +35,27 @@
       "last 1 safari version"
     ]
   },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "dependencies": {
+    "@reduxjs/toolkit": "^1.9.3",
+    "axios": "^1.3.4",
+    "classnames": "^2.3.2",
+    "date-fns": "^2.29.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.5",
+    "react-markdown": "^8.0.5",
+    "react-paginate": "^8.1.4",
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.8.2",
+    "react-toastify": "^9.1.1",
+    "sass": "^1.58.3"
+  },
   "devDependencies": {
     "@babel/core": "^7.21.0",
     "@babel/eslint-parser": "^7.19.1",
@@ -52,20 +67,9 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "husky": "^8.0.3",
+    "husky": "^8.0.0",
     "lint-staged": "^13.1.2",
     "prettier": "^2.8.4",
     "react-scripts": "5.0.1"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "*.js|jsx": [
-      "npm run lint:fix",
-      "git add"
-    ]
   }
 }
