--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.2",
     "react-toastify": "^9.1.1",
+    "reactjs-popup": "^2.0.5",
     "sass": "^1.58.3"
   },
   "devDependencies": {
